# docs/swagger.json
@@ -74,7 +74,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "login"
+                    "auth"
                 ],
                 "summary": "callback endpoint for Discord login",
                 "parameters": [
@@ -101,6 +101,54 @@
                             "items": {
                                 "$ref": "#/definitions/structs.JWTResponse"
                             }
+                        },
+                        "headers": {
+                            "Location": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/token/refresh": {
+            "get": {
+                "description": "refresh token with provided access token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "refresh token with provided access token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "headers": {
+                            "Location": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Error"
                         }
                     },
                     "500": {
@@ -441,11 +489,11 @@
         "structs.Me": {
             "type": "object",
             "properties": {
+                "profile": {
+                    "$ref": "#/definitions/structs.Profile"
+                },
                 "session_expire_at": {
                     "type": "integer"
-                },
-                "user_id": {
-                    "type": "string"
                 }
             }
         },
