# handlers/auth.go
@@ -1,8 +1,13 @@
 package handlers
 
 import (
+	"fmt"
+	"time"
+
 	"github.com/gofiber/fiber/v2"
+	"github.com/golang-jwt/jwt"
 	"github.com/uzushikaminecraft/api/auth"
+	"github.com/uzushikaminecraft/api/config"
 	"github.com/uzushikaminecraft/api/structs"
 )
 
@@ -25,12 +30,14 @@ func HandleAuth(c *fiber.Ctx) error {
 
 // @Summary callback endpoint for Discord login
 // @Description callback endpoint for Discord login
-// @Tags login
+// @Tags auth
 // @Accept  json
 // @Produce  json
 // @Param code query string true "Bearer token"
 // @Param state query string true "Random state for validating request"
 // @Success 200 {array} structs.JWTResponse
+// @Header 200 {string} Location
+// @Failure 400 {object} structs.Error
 // @Failure 500 {object} structs.Error
 // @Router /auth/callback [get]
 func HandleAuthCallback(c *fiber.Ctx) error {
@@ -71,4 +78,68 @@ func HandleAuthCallback(c *fiber.Ctx) error {
 			Error: e,
 		},
 	)
+}
+
+// @Summary refresh token with provided access token
+// @Description refresh token with provided access token
+// @Tags auth
+// @Accept  json
+// @Produce  json
+// @Success 200
+// @Header 200 {string} Location
+// @Failure 400 {object} structs.Error
+// @Failure 500 {object} structs.Error
+// @Router /auth/token/refresh [get]
+func HandleAuthTokenRefresh(c *fiber.Ctx) error {
+	cookie := new(structs.CoreCookie)
+	if err := c.CookieParser(cookie); err != nil {
+		return c.Status(400).JSON(
+			structs.Error{
+				Error: "provided Cookie is not valid",
+			},
+		)
+	}
+
+	if cookie.AccessToken == "" {
+		c.Status(400).JSON(
+			structs.Error{
+				Error: "no token is provided",
+			},
+		)
+	}
+
+	claims, err := auth.Validate(
+		cookie.AccessToken,
+	)
+
+	if err != nil {
+		c.Status(400).JSON(
+			structs.Error{
+				Error: "provided token is not valid",
+			},
+		)
+	}
+
+	claims["exp"] = time.Now().Add(time.Hour * 72).Unix()
+	newToken := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
+	newTokenString, err := newToken.SignedString([]byte(config.Conf.Credentials.JWTSecret))
+	if err != nil {
+		c.Status(500).JSON(
+			structs.Error{
+				Error: fmt.Sprintf("failed to generate new token: %v", err),
+			},
+		)
+	}
+
+	newCookie := new(fiber.Cookie)
+	newCookie.Name = "accessToken"
+	newCookie.Value = newTokenString
+	newCookie.SameSite = "Strict"
+	newCookie.Secure = true
+	newCookie.HTTPOnly = true
+	c.Cookie(newCookie)
+
+	c.Status(301).Redirect("/?loggedIn=success")
+
+	return c.SendStatus(200)
 }
